# qualitytube-os

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/modules/: __init__.py  angle.py  (+22 more)
backend/tests/: test_audio_brief_ai_service.py  test_compliance_checks.py  test_compliance_extended.py  test_db_models.py  test_modules_import.py  test_publishing_api.py  test_script_ai_service.py  test_scripts_api.py  test_scripts_domain.py  test_title_thumbnail_api.py  test_visual_plan_ai_service.py  test_visual_plan_api.py  test_visual_plan_models.py
docs/: architecture.md  script-studio.md
docs/architecture/: domain-model-map.md  repo-reconnaissance.md
docs/compliance/: compliance-guard.md  reused-repetitive-content.md  synthetic-content-disclosure.md  youtube-quality-policy.md
docs/product/: hook-retention-lab.md  mvp-scope.md  non-goals.md  positioning.md  publishing-package.md  script-studio.md  title-thumbnail-lab.md  vision.md  visual-plan-builder.md
docs/prompts/: audio-brief-generation.md  compliance-review.md  hook-generation.md  hook-scoring.md  publishing-package-generation.md  retention-review.md  script-draft-generation.md  script-improvement.md  script-outline-generation.md  script-scoring.md  thumbnail-brief-generation.md  title-generation.md  title-scoring.md  visual-plan-generation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx
(+18 files in other folders)
